--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "aws-sdk": "^2.1048.0",
+    "clsx": "^1.1.1",
     "lint-staged": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
