--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aws-sdk": "^2.1048.0",
     "clsx": "^1.1.1",
     "lint-staged": "^11.1.2",
+    "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.0",
