--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.11",
     "aws-sdk": "^2.1048.0",
     "clsx": "^1.1.1",
+    "hamburger-react": "^2.4.1",
     "lint-staged": "^11.1.2",
     "notistack": "^2.0.3",
     "react": "^17.0.2",
